1.11 Added Visa API and tests